# leeway

./: .gitignore  README.md  com.github.monooso.claude-usage-gnome.yml  io.github.monooso.claude-usage-gnome.yml  io.github.monooso.headroom.yml  me.stephenlewis.Leeway.json  meson.build  meson_options.txt  run.sh  settings
data/: com.github.monooso.claude-usage-gnome.gschema.xml  com.github.monooso.claude-usage-gnome.metainfo.xml.in  com.github.sl.claude-usage.desktop.in  com.github.sl.claude-usage.gschema.xml  io.github.monooso.claude-usage-gnome.desktop.in  io.github.monooso.claude-usage-gnome.gschema.xml  io.github.monooso.claude-usage-gnome.metainfo.xml.in  io.github.monooso.headroom.desktop.in  io.github.monooso.headroom.gschema.xml  io.github.monooso.headroom.metainfo.xml.in  me.stephenlewis.Leeway.desktop.in  me.stephenlewis.Leeway.gschema.xml  me.stephenlewis.Leeway.metainfo.xml.in  me.stephenlewis.Leeway.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: api_client.py  application.py  claude-usage-gnome.in  claude-usage.in  config.py  config.py.in  credential_reader.py  headroom.in  leeway.gresource.xml  leeway.in  main.py  meson.build  preferences.py  statusline.py  usage_calculator.py  usage_model.py  window.py
src/app/: api_client.py  api_fetcher.py  config.py  credential_reader.py  formatting.py  main.py  preferences.py  usage_calculator.py  usage_group.py  usage_model.py  window.py
src/ui/: leeway.gresource.xml  preferences-dialog.ui  preferences.ui  shortcuts-dialog.ui  shortcuts.ui  usage-group.ui  window.ui
tests/: conftest.py  test_api_client.py  test_credential_reader.py  test_formatting.py  test_statusline.py  test_usage_calculator.py  test_usage_model.py  test_window.py
